[package]
name = "sp-database"
version = "4.0.0-dev"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "Apache-2.0"
homepage = ""
repository = "https://github.com/axia-tech/substrate/"
description = "Substrate database trait."
documentation = "https://docs.rs/sp-database"
readme = "README.md"

[dependencies]
parking_lot = "0.11.1"
kvdb = "0.10.0"

