[package]
name = "sp-panic-handler"
version = "3.0.0"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "Apache-2.0"
homepage = ""
repository = "https://github.com/axia-tech/substrate/"
description = "Custom panic hook with bug report link"
documentation = "https://docs.rs/sp-panic-handler"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
backtrace = "0.3.38"
