[package]
name = "sc-transaction-pool-api"
version = "4.0.0-dev"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = ""
repository = "https://github.com/axia-tech/substrate/"
description = "Transaction pool client facing API."

[dependencies]
futures = { version = "0.3.17"  }
log = { version = "0.4.8" }
serde = { version = "1.0.126", features = ["derive"] }
thiserror = { version = "1.0.21" }
sp-runtime = { version = "4.0.0-dev", default-features = false, path = "../../../primitives/runtime" }

derive_more = { version = "0.99.11" }
sp-blockchain = { version = "4.0.0-dev", path = "../../../primitives/blockchain" }
