[package]
name = "pallet-staking-reward-curve"
version = "4.0.0-dev"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "Apache-2.0"
homepage = ""
repository = "https://github.com/axia-tech/substrate/"
description = "Reward Curve for FRAME staking pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.80", features = ["full", "visit"] }
quote = "1.0.10"
proc-macro2 = "1.0.29"
proc-macro-crate = "1.0.0"

[dev-dependencies]
sp-runtime = { version = "4.0.0-dev", path = "../../../primitives/runtime" }
