[package]
name = "node-runtime-generate-bags"
version = "3.0.0"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "Apache-2.0"
homepage = ""
repository = "https://github.com/axia-tech/substrate/"
description = "Bag threshold generation script for pallet-bag-list and node-runtime."
readme = "README.md"

[dependencies]
node-runtime = { version = "3.0.0-dev", path = "../../../../bin/node/runtime" }
generate-bags = { version = "3.0.0", path = "../" }

# third-party
structopt = "0.3.21"
