[package]
name = "frame-support-procedural-tools-derive"
version = "3.0.0"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "Apache-2.0"
homepage = ""
repository = "https://github.com/axia-tech/substrate/"
description = "Use to derive parsing for parsing struct."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.29"
quote = { version = "1.0.10", features = ["proc-macro"] }
syn = { version = "1.0.80", features = ["proc-macro" ,"full", "extra-traits", "parsing"] }
